--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <span class="fa fa-navicon"></span>
                 </md-button>
 
-                <span style="margin-top: -5px; font-size: 26px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">{{vm.currentStateUpperCase()}}</span>
+                <span style="margin-top: -5px; font-size: 30px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold;">{{vm.currentStateUpperCase()}}</span>
 
                 <!--<div class="btn-group"-->
                      <!--ng-class="{open: vm.operatorControlHover || vm.operatorControlMenuHover}" layout="row">-->
