--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -15,13 +15,16 @@
                     <md-button ng-click="vm.acknowledgeSelectedAlarms()" aria-label="Acknowledge" class="md-primary md-raised">Acknowledge</md-button>
                     <md-button ng-click="vm.clearSelectedAlarms()" aria-label="Clear" class="md-primary md-raised">Clear</md-button>
                     <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showClearedAlarms" aria-label="Show Cleared Alarms">Show Cleared Alarms</md-checkbox>
+                    <select class="form-control" style="display: inline; width: 150px; margin-right: 16px;" ng-model="vm.alarmsOrderBy" ng-options="s.label for s in vm.orderByFields">
+                        <option value="">-- Order By --</option>
+                    </select>
                     <md-text-float md-theme="none" style="font-size: 14px; margin-top: -5px;" type="search" ng-model="vm.q" label="Search Alarms..."></md-text-float>
                 </section>
             </div>
         </md-toolbar>
         <section class="alarms-list alarms-list-large" ng-click="vm.selectAllAlarms = false">
             <md-list>
-                <md-item ng-repeat="item in vm.alarmsData | orderBy:'dateUnix' | filter:vm.q as results">
+                <md-item ng-repeat="item in vm.alarmsData | orderBy:vm.alarmsOrderBy.value | filter:vm.q as results">
                     <md-item-content ng-click="item.selected = !item.selected"
                                      ng-if="vm.showClearedAlarms || item.priority !== 'cleared'"
                                      ng-switch="item.severity"
@@ -53,11 +56,11 @@
                                 <md-tooltip>Error</md-tooltip>
                             </span>
                         </div>
-                        <div class="md-tile-content alarms-list-item-content" layout="horizontally" layout-padding style="z-index: 1">
-                            <h3 flex style="max-width: 170px;"><b>{{item.date}}</b></h3>
-                            <h4 flex style="max-width: 100px; text-overflow: ellipsis"><i>{{item.priority}}</i></h4>
-                            <h4 flex style="max-width: 260px; text-overflow: ellipsis">{{item.name}}</h4>
-                            <h4 flex>{{item.message}}</h4>
+                        <div class="md-tile-content alarms-list-item-content" layout="row" layout-padding style="z-index: 1" layout-align="start">
+                            <span flex style="max-width: 170px; font-weight: bold; font-size: 16px;"><b>{{item.date}}</b></span>
+                            <span flex style="max-width: 100px; text-overflow: ellipsis; font-size: 14px;"><i>{{item.priority}}</i></span>
+                            <span flex style="max-width: 260px; text-overflow: ellipsis; font-size: 14px;">{{item.name}}</span>
+                            <span flex style="font-size: 14px;">{{item.message}}</span>
                         </div>
 
                         <div class="background-div background-gradient-div-warn" ng-switch-when="warn"></div>
@@ -90,8 +93,13 @@
                 <span flex></span>
                 <section md-theme="{{themePrimaryButtons}}" layout="row" layout-align="center center" class="alarms-buttons" md-theme-watch="true">
                     <md-button ng-click="vm.cancelKnowSelectedAlarms()" aria-label="Cancel Known" class="md-primary md-raised">Cancel Known</md-button>
-                    <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showKnownNominalAlarms" aria-label="Show Nominal">Show Nominal</md-checkbox>
-                    <md-checkbox class="alarms-tools-checkbox" ng-model="vm.showKnownMaintenanceAlarms" aria-label="Show Maintenance">Show Maintenance</md-checkbox>
+                    <div layout="column">
+                        <md-checkbox style="font-size: 14px; margin-top: 2px; margin-bottom: 2px;" class="alarms-tools-checkbox" ng-model="vm.showKnownNominalAlarms" aria-label="Show Nominal">Show Nominal</md-checkbox>
+                        <md-checkbox style="font-size: 14px; margin-top: 2px; margin-bottom: 2px;" class="alarms-tools-checkbox" ng-model="vm.showKnownMaintenanceAlarms" aria-label="Show Maintenance">Show Maintenance</md-checkbox>
+                    </div>
+                    <select class="form-control" style="display: inline; width: 150px; margin-right: 16px;" ng-model="vm.alarmsKnownOrderBy" ng-options="s.label for s in vm.orderByFields">
+                        <option value="">-- Order By --</option>
+                    </select>
                     <md-text-float md-theme="none" style="font-size: 14px; margin-top: -5px;" type="search" ng-model="vm.q2" label="Search Known Alarms..."></md-text-float>
                     <span flex></span>
                 </section>
@@ -100,7 +108,7 @@
 
         <section class="alarms-list alarms-list-small" ng-click="vm.selectAllKnownAlarms = false">
             <md-list>
-                <md-item ng-repeat="item in vm.knownAlarmsData  | orderBy:'dateUnix' | filter:vm.q2 as resultsKnown">
+                <md-item ng-repeat="item in vm.knownAlarmsData  | orderBy:vm.alarmsKnownOrderBy.value | filter:vm.q2 as resultsKnown">
                     <md-item-content ng-if="(vm.showKnownNominalAlarms || item.severity !== 'nominal') && (vm.showKnownMaintenanceAlarms || item.severity !== 'maintenance')"
                                      ng-click="item.selected = !item.selected"
                                      ng-switch="item.severity"
@@ -133,10 +141,10 @@
                             </span>
                         </div>
                         <div class="md-tile-content alarms-list-item-content" layout="horizontally" layout-padding style="z-index: 1">
-                            <h3 flex style="max-width: 170px;"><b>{{item.date}}</b></h3>
-                            <h4 flex style="max-width: 160px;"><i>{{item.priority}}</i></h4>
-                            <h4 flex style="max-width: 160px;">{{item.name}}</h4>
-                            <h4 flex>{{item.message}}</h4>
+                            <span flex style="max-width: 170px; font-weight: bold; font-size: 16px;"><b>{{item.date}}</b></span>
+                            <span flex style="max-width: 100px; text-overflow: ellipsis; font-size: 14px;"><i>{{item.priority}}</i></span>
+                            <span flex style="max-width: 260px; text-overflow: ellipsis; font-size: 14px;">{{item.name}}</span>
+                            <span flex style="font-size: 14px;">{{item.message}}</span>
                         </div>
 
                         <div class="background-div background-gradient-div-warn" ng-switch-when="warn"></div>
