--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 <script src="app/d3/d3-service.js"></script>
 <script src="app/admin/admin.js"></script>
 <script src="app/util/util.js"></script>
+<script src="app/util/sha256.js"></script>
 <script src="app/alarms/alarms.js"></script>
 <script src="app/alarms/alarms-notify.js"></script>
 <script src="app/widgets/navigation/navigation-widget.js"></script>
