scheduler layout fixes

--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -1,4 +1,4 @@
-<div class="view-container" ng-controller="AlarmsCtrl as vm" layout="column">
+<div flex class="view-container" ng-controller="AlarmsCtrl as vm" layout="column">
 
     <div class="md-whiteframe-z1" layout="column">
         <md-toolbar class="panel-toolbar">
