--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             </div>
 
         </md-toolbar>
-        <md-content id="ui-view-container-div" ui-view flex class="md-content-padding">
+        <md-content id="ui-view-container-div" ui-view flex class="md-content-padding" layout="column">
         </md-content>
     </div>
     <!--</section>-->
